--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2021"
 log = "0.4.20"
 serde_json = "1.0.114"
 serde = { version = "1.0.197", features = ["derive"] }
+regex = "1.10.3"
+chrono = "0.4.34"
+hex = "0.4.3"
+bytes = "1.5.0"
