--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-log = "0.4.20"
-serde_json = "1.0.114"
-serde = { version = "1.0.197", features = ["derive"] }
-regex = "1.10.3"
-chrono = "0.4.34"
-hex = "0.4.3"
+actix-web = "4.5.1"
 bytes = "1.5.0"
+chrono = "0.4.35"
+crossterm = "0.27.0"
+hex = "0.4.3"
+log = "0.4.21"
+regex = "1.10.3"
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
 uuid = { version = "1.7.0", features = ["v4"] }
