--- a/src/server/Cargo.toml
+++ b/src/server/Cargo.toml
@@ -8,3 +8,5 @@ name = "tinydb_server"
 path = "main.rs"
 
 [dependencies]
+actix-web = "4.5.1"
+serde = { version = "1.0.197", features = ["derive"] }
