--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
-workspace = { members = ["src/core", "src/server"] }
+workspace = { members = ["src/core", "src/repl"] }
 
 [package]
 name = "tiny_db"
 version = "0.1.0"
 edition = "2021"
+
+[dev-dependencies]
+tokio = { version = "1.36.0", features = ["full"] }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -14,15 +17,17 @@ chrono = "0.4.35"
 crossterm = "0.27.0"
 hex = "0.4.3"
 log = "0.4.21"
+maplit = "1.0.2"
 regex = "1.10.3"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 uuid = { version = "1.7.0", features = ["v4"] }
-
-[[bin]]
-name = "tinydb_cli"
-path = "./src/core/main.rs"
+wasm-bindgen = "0.2.92"
 
 [[bin]]
 name = "tinydb_server"
-path = "./src/server/main.rs"
+path = "./src/core/main.rs"
+
+[[bin]]
+name = "tinydb_cli"
+path = "src/repl/main.rs"
