--- a/src/repl/Cargo.toml
+++ b/src/repl/Cargo.toml
@@ -1,26 +1,17 @@
 [package]
-name = "core"
+name = "repl"
 version = "0.1.0"
 edition = "2021"
 
 [[bin]]
-name = "tinydb_server"
+name = "tinydb_cli"
 path = "main.rs"
 
 [dev-dependencies]
 tokio = { version = "1.36.0", features = ["full"] }
 
 [dependencies]
-actix-web = "4.5.1"
-bytes = "1.5.0"
-chrono = "0.4.35"
 crossterm = "0.27.0"
-hex = "0.4.3"
-log = "0.4.21"
-maplit = "1.0.2"
-regex = "1.10.3"
 serde = { version = "1.0.197", features = ["derive"] }
-serde_json = "1.0.114"
-uuid = { version = "1.7.0", features = ["v4"] }
+regex = "1.10.3"
 tokio = "1.36.0"
-wasm-bindgen = "0.2.92"
