--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ crossterm = "0.27.0"
 hex = "0.4.3"
 log = "0.4.21"
 maplit = "1.0.2"
+num-traits = "0.2.18"
 rand = "0.8.5"
 regex = "1.10.3"
 serde = { version = "1.0.197", features = ["derive"] }
