--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [[bin]]
-name = "tinydb_server"
+name = "oxide_server"
 path = "main.rs"
 
 [dev-dependencies]
@@ -15,6 +15,7 @@ actix-web = "4.5.1"
 bytes = "1.5.0"
 chrono = "0.4.35"
 crossterm = "0.27.0"
+env_logger = "0.11.3"
 hex = "0.4.3"
 log = "0.4.21"
 maplit = "1.0.2"
@@ -26,4 +27,5 @@ serde_json = "1.0.114"
 uuid = { version = "1.7.0", features = ["v4"] }
 tokio = "1.36.0"
 wasm-bindgen = "0.2.92"
+
 
