--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,10 @@ maplit = "1.0.2"
 num-traits = "0.2.18"
 rand = "0.8.5"
 regex = "1.10.3"
+reqwest = "0.11.26"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
+tokio = "1.36.0"
 uuid = { version = "1.7.0", features = ["v4"] }
 wasm-bindgen = "0.2.92"
 
