--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -24,8 +24,6 @@ rand = "0.8.5"
 regex = "1.10.3"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
-uuid = { version = "1.7.0", features = ["v4"] }
 tokio = "1.36.0"
-wasm-bindgen = "0.2.92"
-
-
+uuid = { version = "1.7.0", features = ["v4"] }
+#wasm-bindgen = "0.2.92"
