--- a/src/repl/Cargo.toml
+++ b/src/repl/Cargo.toml
@@ -12,6 +12,8 @@ tokio = { version = "1.36.0", features = ["full"] }
 
 [dependencies]
 crossterm = "0.27.0"
-serde = { version = "1.0.197", features = ["derive"] }
 regex = "1.10.3"
-tokio = "1.36.0"
+reqwest = "0.11.26"
+serde = { version = "1.0.197", features = ["derive"] }
+tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
+serde_json = "1.0.114"
