--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -10,20 +10,28 @@ path = "main.rs"
 [dev-dependencies]
 tokio = { version = "1.36.0", features = ["full"] }
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
+actix = "0.13.3"
 actix-web = "4.5.1"
+actix-web-actors = "4.3.0"
 bytes = "1.5.0"
 chrono = "0.4.35"
 crossterm = "0.27.0"
 env_logger = "0.11.3"
+futures = "0.3.30"
+futures-util = "0.3.30"
 hex = "0.4.3"
 log = "0.4.21"
 maplit = "1.0.2"
 num-traits = "0.2.18"
 rand = "0.8.5"
 regex = "1.10.3"
+reqwest = "0.12.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 tokio = "1.36.0"
 uuid = { version = "1.7.0", features = ["v4"] }
+tokio-tungstenite = "0.21.0"
 #wasm-bindgen = "0.2.92"
