--- a/src/repl/Cargo.toml
+++ b/src/repl/Cargo.toml
@@ -11,9 +11,10 @@ path = "main.rs"
 tokio = { version = "1.36.0", features = ["full"] }
 
 [dependencies]
+shared_lib = { path = "../../shared_lib" }
 crossterm = "0.27.0"
 regex = "1.10.3"
-reqwest = "0.11.26"
+reqwest = "0.12.2"
 serde = { version = "1.0.197", features = ["derive"] }
 tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
 serde_json = "1.0.114"
