--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,18 +5,16 @@ name = "tiny_db"
 version = "0.1.0"
 edition = "2021"
 
-[dev-dependencies]
-tokio = { version = "1.36.0", features = ["full"] }
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 shared_lib = { path = "shared_lib" }
 actix = "0.13.3"
+actix-session = { version = "0.9.0", features = ["cookie-session"] }
 actix-web = "4.5.1"
 actix-web-actors = "4.3.0"
 bytes = "1.5.0"
-chrono = "0.4.35"
+chrono = "0.4.37"
 crossterm = "0.27.0"
 env_logger = "0.11.3"
 futures = "0.3.30"
@@ -27,12 +25,12 @@ maplit = "1.0.2"
 num-traits = "0.2.18"
 rand = "0.8.5"
 regex = "1.10.3"
-reqwest = "0.12.0"
+reqwest = { version = "0.12.2", features = ["cookies"] }
 serde = { version = "1.0.197", features = ["derive"] }
-serde_json = "1.0.114"
-tokio = "1.36.0"
-uuid = { version = "1.7.0", features = ["v4"] }
+serde_json = "1.0.115"
+tokio = { version = "1.37.0", features = ["full"] }
 tokio-tungstenite = "0.21.0"
+uuid = { version = "1.8.0", features = ["v4"] }
 #wasm-bindgen = "0.2.92"
 
 [[bin]]
