--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
-workspace = { members = [ "shared_lib", "src/core", "src/repl"] }
+workspace = { members = [ "shared_lib", "src/core"] }
 
 [package]
-name = "tiny_db"
+name = "oxide"
 version = "0.1.0"
 edition = "2021"
 
@@ -29,14 +29,11 @@ reqwest = { version = "0.12.2", features = ["cookies"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 tokio = { version = "1.37.0", features = ["full"] }
-tokio-tungstenite = "0.21.0"
+tokio-tungstenite = "0.23.0"
 uuid = { version = "1.8.0", features = ["v4"] }
 #wasm-bindgen = "0.2.92"
 
 [[bin]]
-name = "oxide_server"
+name = "oxide"
 path = "./src/core/main.rs"
 
-[[bin]]
-name = "oxide_repl"
-path = "src/repl/main.rs"
