--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -10,12 +10,12 @@ path = "main.rs"
 [dependencies]
 shared_lib = { path = "../../shared_lib" }
 actix = "0.13.3"
-actix-session = { version = "0.9.0", features = ["cookie-session"] }
+actix-session = { version = "0.10.0", features = ["cookie-session"] }
 actix-web = "4.5.1"
 actix-web-actors = "4.3.0"
 bytes = "1.5.0"
 chrono = "0.4.37"
-crossterm = "0.27.0"
+crossterm = "0.28.1"
 env_logger = "0.11.3"
 futures = "0.3.30"
 futures-util = "0.3.30"
@@ -25,10 +25,10 @@ maplit = "1.0.2"
 num-traits = "0.2.18"
 rand = "0.8.5"
 regex = "1.10.3"
-reqwest = "0.12.0"
+reqwest = { version = "0.12.7", features = ["json", "multipart"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 tokio = { version = "1.37.0", features = ["full"] }
-tokio-tungstenite = "0.21.0"
+tokio-tungstenite = "0.23.1"
 uuid = { version = "1.7.0", features = ["v4"] }
 #wasm-bindgen = "0.2.92"
