--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ actix = "0.13.3"
 actix-session = { version = "0.10.0", features = ["cookie-session"] }
 actix-web = "4.5.1"
 actix-web-actors = "4.3.0"
+bincode = "1.3.1"
 bytes = "1.5.0"
 chrono = "0.4.37"
 crossterm = "0.28.1"
