--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ futures-util = "0.3.30"
 hex = "0.4.3"
 log = "0.4.21"
 maplit = "1.0.2"
+md5 = "0.7.0"
 num-traits = "0.2.18"
 rand = "0.8.5"
 regex = "1.10.3"
@@ -32,6 +33,8 @@ serde_json = "1.0.115"
 tokio = { version = "1.37.0", features = ["full"] }
 tokio-tungstenite = "0.23.0"
 uuid = { version = "1.8.0", features = ["v4"] }
+base64 = "0.22.1"
+urlencoding = "2.1"
 #wasm-bindgen = "0.2.92"
 
 [[bin]]
