--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -32,4 +32,7 @@ serde_json = "1.0.114"
 tokio = { version = "1.37.0", features = ["full"] }
 tokio-tungstenite = "0.23.1"
 uuid = { version = "1.7.0", features = ["v4"] }
+md5 = "0.7.0"
+base64 = "0.22.1"
+urlencoding = "2.1"
 #wasm-bindgen = "0.2.92"
