--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 tokio = { version = "1.37.0", features = ["full"] }
 tokio-tungstenite = "0.23.0"
+users = "0.11"
 uuid = { version = "1.8.0", features = ["v4"] }
 base64 = "0.22.1"
 urlencoding = "2.1"
