--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -31,6 +31,7 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 tokio = { version = "1.37.0", features = ["full"] }
 tokio-tungstenite = "0.23.1"
+users = "0.11"
 uuid = { version = "1.7.0", features = ["v4"] }
 md5 = "0.7.0"
 base64 = "0.22.1"
