--- a/shared_lib/Cargo.toml
+++ b/shared_lib/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+num-traits = "0.2.18"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 regex = "1.10.4"
+chrono = "0.4.38"
