--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ md5 = "0.7.0"
 num-traits = "0.2.18"
 rand = "0.8.5"
 regex = "1.10.3"
-reqwest = { version = "0.12.7", features = ["cookies", "multipart"] }
+reqwest = { version = "0.12.7", features = ["blocking", "cookies", "multipart"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 tokio = { version = "1.37.0", features = ["full"] }
