--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -26,7 +26,7 @@ maplit = "1.0.2"
 num-traits = "0.2.18"
 rand = "0.8.5"
 regex = "1.10.3"
-reqwest = { version = "0.12.7", features = ["json", "multipart"] }
+reqwest = { version = "0.12.7", features = ["blocking", "json", "multipart"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 tokio = { version = "1.37.0", features = ["full"] }
