--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ bytes = "1.5.0"
 chrono = "0.4.37"
 crossterm = "0.28.1"
 env_logger = "0.11.3"
+flate2 = "1.0"
 futures = "0.3.30"
 futures-util = "0.3.30"
 hex = "0.4.3"
