--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ users = "0.11"
 uuid = { version = "1.8.0", features = ["v4"] }
 base64 = "0.22.1"
 urlencoding = "2.1"
+home = "0.5.11"
 #wasm-bindgen = "0.2.92"
 
 [[bin]]
