milestone 41: data type refinements
* added a new type to support fixed-length data types
* added "nsd" package for managing dataframes in namespaces
* added "util::to" to support conversions between types
* removed type ASCII
* simplified numeric types
* DateValue and UUIDValue are no longer part of Number
* minor clean up
* migrated to isahc HTTP client

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ base64 = "0.22.1"
 urlencoding = "2.1"
 home = "0.5.11"
 #wasm-bindgen = "0.2.92"
+isahc = { version = "1.7", features = ["json"] }
 
 [[bin]]
 name = "oxide"
