--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -38,4 +38,5 @@ md5 = "0.7.0"
 base64 = "0.22.1"
 urlencoding = "2.1"
 home = "0.5.11"
+isahc = { version = "1.7", features = ["json"] }
 #wasm-bindgen = "0.2.92"
