milestone 44: native SQL grammar evolution
* added date literals
* removed unused functions
* insert a row into the table
```
{ symbol: "XYZ", exchange: "NASDAQ", last_sale: 0.0872 }
    ~> stocks
```
* update a row within the table
```
{ symbol: "BKP", exchange: "OTCBB", last_sale: 0.1421 }
   ~> (stocks where symbol is "BKPQ")
```
* overwrite a row within the table
```
{ symbol: "BKP", exchange: "OTCBB", last_sale: 0.1421 }
   ~>> (stocks where symbol is "BKPQ")
```
* removed keywords append, from, overwrite, truncate, update & via
* delete & undelete keywords are no longer succeeded by "from"
```
undelete stocks where last_sale > 1.0
```
* tables now natively support ToolsPkg functions (e.g. describe, reverse, etc.)
* added inner table reference operator (&)
```
&stocks(0, 2)
|-------------------------------------------|
| id | last_sale | processed_time           |
|-------------------------------------------|
| 0  | 11.67     | 2025-01-13T03:25:47.350Z |
|-------------------------------------------|
```

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ urlencoding = "2.1"
 home = "0.5.11"
 #wasm-bindgen = "0.2.92"
 isahc = { version = "1.7", features = ["json"] }
+itertools = "0.14.0"
 
 [[bin]]
 name = "oxide"
