--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -39,4 +39,5 @@ base64 = "0.22.1"
 urlencoding = "2.1"
 home = "0.5.11"
 isahc = { version = "1.7", features = ["json"] }
+itertools = "0.14.0"
 #wasm-bindgen = "0.2.92"
