--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ home = "0.5.11"
 #wasm-bindgen = "0.2.92"
 isahc = { version = "1.7", features = ["json"] }
 itertools = "0.14.0"
+rust_decimal = "1.34"
 
 [[bin]]
 name = "oxide"
