--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -41,3 +41,4 @@ home = "0.5.11"
 isahc = { version = "1.7", features = ["json"] }
 itertools = "0.14.0"
 #wasm-bindgen = "0.2.92"
+rust_decimal = "1.34"
