--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base62 = "2.2"
 shared_lib = { path = "shared_lib" }
 actix = "0.13.3"
 actix-session = { version = "0.10.0", features = ["cookie-session"] }
@@ -29,6 +30,7 @@ num-traits = "0.2.18"
 rand = "0.8.5"
 regex = "1.10.3"
 reqwest = { version = "0.12.7", features = ["blocking", "cookies", "multipart"] }
+rustyline = "13"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 tokio = { version = "1.37.0", features = ["full"] }
@@ -42,6 +44,8 @@ home = "0.5.11"
 isahc = { version = "1.7", features = ["json"] }
 itertools = "0.14.0"
 rust_decimal = "1.34"
+whoami = "1.4"
+once_cell = "1.19.0"
 
 [[bin]]
 name = "oxide"
