--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -8,11 +8,14 @@ name = "oxide_server"
 path = "main.rs"
 
 [dependencies]
+whoami = "1.4"
+rustyline = "13"
 shared_lib = { path = "../../shared_lib" }
 actix = "0.13.3"
 actix-session = { version = "0.10.0", features = ["cookie-session"] }
 actix-web = "4.5.1"
 actix-web-actors = "4.3.0"
+base62 = "2.2"
 bincode = "1.3.1"
 bytes = "1.5.0"
 chrono = "0.4.37"
@@ -42,3 +45,4 @@ isahc = { version = "1.7", features = ["json"] }
 itertools = "0.14.0"
 #wasm-bindgen = "0.2.92"
 rust_decimal = "1.34"
+once_cell = "1.19.0"
